logs/dag_id=get_todays_gamesv2/run_id=manual__2023-05-14T18:10:24.401323+00:00/task_id=exec_insert_query_task/attempt=1.log
[2023-05-14T18:10:39.142+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: get_todays_gamesv2.exec_insert_query_task manual__2023-05-14T18:10:24.401323+00:00 [queued]>
[2023-05-14T18:10:39.155+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: get_todays_gamesv2.exec_insert_query_task manual__2023-05-14T18:10:24.401323+00:00 [queued]>
[2023-05-14T18:10:39.155+0000] {taskinstance.py:1282} INFO - 
--------------------------------------------------------------------------------
[2023-05-14T18:10:39.156+0000] {taskinstance.py:1283} INFO - Starting attempt 1 of 1
[2023-05-14T18:10:39.156+0000] {taskinstance.py:1284} INFO - 
--------------------------------------------------------------------------------
[2023-05-14T18:10:39.174+0000] {taskinstance.py:1303} INFO - Executing <Task(PostgresOperator): exec_insert_query_task> on 2023-05-14 18:10:24.401323+00:00
[2023-05-14T18:10:39.181+0000] {standard_task_runner.py:55} INFO - Started process 3378 to run task
[2023-05-14T18:10:39.185+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'get_todays_gamesv2', 'exec_insert_query_task', 'manual__2023-05-14T18:10:24.401323+00:00', '--job-id', '1487', '--raw', '--subdir', 'DAGS_FOLDER/todays_gamesv2.py', '--cfg-path', '/tmp/tmpkj8rw0it']
[2023-05-14T18:10:39.185+0000] {standard_task_runner.py:83} INFO - Job 1487: Subtask exec_insert_query_task
[2023-05-14T18:10:39.261+0000] {task_command.py:388} INFO - Running <TaskInstance: get_todays_gamesv2.exec_insert_query_task manual__2023-05-14T18:10:24.401323+00:00 [running]> on host f7ab54451666
[2023-05-14T18:10:39.367+0000] {taskinstance.py:1511} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=get_todays_gamesv2
AIRFLOW_CTX_TASK_ID=exec_insert_query_task
AIRFLOW_CTX_EXECUTION_DATE=2023-05-14T18:10:24.401323+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-05-14T18:10:24.401323+00:00
[2023-05-14T18:10:39.370+0000] {sql.py:254} INFO - Executing: 
INSERT INTO games (away_name,home_name,away_probable_pitcher,home_probable_pitcher,venue_name,game_date,
                                                              home_wins, home_losses, home_gb, away_wins, away_losses, away_gb, team_win_prob)
                                   VALUES ('Tampa Bay Rays','New York Yankees','Zach Eflin',
                                   'Clarke Schmidt','Yankee Stadium','2023-05-14',
                                   '23','18','7.0','30','11','0','49%','1:35 PM');
[2023-05-14T18:10:39.380+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-14T18:10:39.667+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-14T18:10:39.670+0000] {sql.py:375} INFO - Running statement: 
INSERT INTO games (away_name,home_name,away_probable_pitcher,home_probable_pitcher,venue_name,game_date,
                                                              home_wins, home_losses, home_gb, away_wins, away_losses, away_gb, team_win_prob)
                                   VALUES ('Tampa Bay Rays','New York Yankees','Zach Eflin',
                                   'Clarke Schmidt','Yankee Stadium','2023-05-14',
                                   '23','18','7.0','30','11','0','49%','1:35 PM');, parameters: None
[2023-05-14T18:10:39.672+0000] {taskinstance.py:1775} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 6: ...              '23','18','7.0','30','11','0','49%','1:35 PM')...
                                                             ^

[2023-05-14T18:10:39.682+0000] {taskinstance.py:1326} INFO - Marking task as FAILED. dag_id=get_todays_gamesv2, task_id=exec_insert_query_task, execution_date=20230514T181024, start_date=20230514T181039, end_date=20230514T181039
[2023-05-14T18:10:39.696+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 1487 for task exec_insert_query_task (INSERT has more expressions than target columns
LINE 6: ...              '23','18','7.0','30','11','0','49%','1:35 PM')...
                                                             ^
; 3378)
[2023-05-14T18:10:39.717+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-05-14T18:10:39.759+0000] {taskinstance.py:2585} INFO - 0 downstream tasks scheduled from follow-on schedule check
